- Modificados los tests para poder correr con la nueva estructura. - Eliminadas las clases obsoletas de App. - Corregida la función de Tools para guardar settings.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "bootbox": "5.*",
     "bootstrap": "4.*",
     "chart.js": "2.*",
-    "jquery": "3.6.*",
+    "jquery": "^3.6.4",
     "jquery-ui-dist": "1.12.*",
     "pace-js": "1.*"
   }
