--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
     "ext-mysqli": "*",
     "ext-bcmath": "*",
     "ext-gd": "*",
-    "ext-curl": "*"
+    "ext-curl": "*",
+    "ext-soap": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "8.*",
