--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/fontawesome-free": "6.*",
     "bootbox": "5.*",
     "bootstrap": "4.*",
+    "bootstrap5": "npm:bootstrap@5.*",
     "chart.js": "2.*",
     "jquery": "3.6.*",
     "jquery-ui-dist": "1.12.*",
