Versión inicial de la nueva clase para generar PDF.

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     "ext-mysqli": "*",
     "ext-bcmath": "*",
     "ext-gd": "*",
-    "ext-curl": "*"
+    "ext-curl": "*",
+    "setasign/fpdf": "^1.8"
   },
   "require-dev": {
     "phpunit/phpunit": "8.*",
