--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     "ext-mysqli": "*",
     "ext-bcmath": "*",
     "ext-gd": "*",
-    "ext-curl": "*"
+    "ext-curl": "*",
+    "nesbot/carbon": "^2.71"
   },
   "require-dev": {
     "phpunit/phpunit": "8.*",
