--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://facturascripts.com",
   "dependencies": {
+    "@eastdesire/jscolor": "^2.5.2",
     "@fortawesome/fontawesome-free": "6.*",
     "bootbox": "5.*",
     "bootstrap": "4.*",
