--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
   "require-dev": {
     "phpunit/phpunit": "8.*",
     "squizlabs/php_codesniffer": "3.*",
-    "phpstan/phpstan": "^0.12.93"
+    "phpstan/phpstan": "1.*"
   },
   "autoload": {
     "psr-4": {
