--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
     "ext-mysqli": "*",
     "ext-bcmath": "*",
     "ext-gd": "*",
-    "ext-curl": "*"
+    "ext-curl": "*",
+    "ext-openssl": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "9.*",
