--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://facturascripts.com",
   "dependencies": {
     "@eastdesire/jscolor": "^2.5.2",
-    "@fortawesome/fontawesome-free": "6.*",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "bootbox": "5.*",
     "bootstrap": "4.*",
     "chart.js": "2.*",
