--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
   "dependencies": {
     "@eastdesire/jscolor": "^2.5.2",
     "@fortawesome/fontawesome-free": "6.*",
+    "@ttskch/select2-bootstrap4-theme": "^1.5.2",
     "bootbox": "5.*",
     "bootstrap": "4.*",
     "chart.js": "2.*",
     "jquery": "^3.6.4",
     "jquery-ui-dist": "1.12.*",
     "pace-js": "1.*",
-    "select2": "^4.1.0-rc.0"
+    "select2": "^4.0.13"
   }
 }
