--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     "ext-gd": "*",
     "ext-curl": "*",
     "pragmarx/google2fa": "^8.0",
-    "bacon/bacon-qr-code": "^2.0"
+    "endroid/qr-code": "^4.3"
   },
   "require-dev": {
     "phpunit/phpunit": "9.*",
