--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -11,34 +11,35 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
+  
+  test:
 
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php-versions: ['8.4'] #php-versions: ['5.6', '7.0', '7.1', '7.2', '7.3', '7.4', '8.0', '8.1', '8.2', '8.3', '8.4']
+        php-versions: ['5.6', '7.0', '7.1', '7.2', '7.3', '7.4', '8.0', '8.1', '8.2', '8.3', '8.4']
 
-    name: PHP ${{ matrix.php-versions }}
+    name: Tests unitarios en PHP ${{ matrix.php-versions }}
     steps:
     - name: Agregar el repo
       uses: actions/checkout@v4
 
-    - name: Montar php
+    - name: Instalar PHP ${{ matrix.php-versions }}
       uses: shivammathur/setup-php@v2
       with:
         php-version: ${{ matrix.php-versions }}
         extensions: bcmath, curl, gd, iconv, mysqli, pdo_mysql, soap, zip, fileinfo, openssl, simplexml, mbstring
 
-    - name: Instalar dependencias de composer
+    - name: Instalar dependencias
       uses: "ramsey/composer-install@v3"
 
-    - name: Agregar la base de datos
-      uses: getong/mariadb-action@v1.11
+    - name: Montar base de datos
+      uses: mirromutth/mysql-action@v1.1
       with:
         mysql root password: 'root'
         mysql database: 'facturascripts'
 
-    - name: Agregar configuración al proyecto
+    - name: Agregar configuración del proyecto
       run: echo "<?php
           define('FS_COOKIES_EXPIRE', 31536000);
           define('FS_ROUTE', '');
@@ -53,14 +54,11 @@ jobs:
           define('FS_MYSQL_CHARSET', 'utf8mb4');
           define('FS_MYSQL_COLLATE', 'utf8mb4_unicode_520_ci');
           define('FS_LANG', 'es_ES');
-          define('FS_TIMEZONE', 'Africa/Abidjan');
+          define('FS_TIMEZONE', 'Europe/Madrid');
           define('FS_HIDDEN_PLUGINS', '');
           define('FS_DEBUG', true);
           define('FS_DISABLE_ADD_PLUGINS', false);
           define('FS_DISABLE_RM_PLUGINS', false);" > config.php
-
-    - name: Ver info
-      run: cat config.php
 
     - name: Ejecutar tests
       run: vendor/bin/phpunit --testdox --colors=always
