--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -33,11 +33,15 @@ jobs:
     - name: Instalar dependencias
       uses: "ramsey/composer-install@v3"
 
+    - name: Shutdown default Ubuntu MySQL
+      run: sudo service mysql stop # Shutdown the Default MySQL, "sudo" is necessary, please not remove it
+
     - name: Montar base de datos
       uses: mirromutth/mysql-action@v1.1
       with:
         mysql root password: 'root'
         mysql database: 'facturascripts'
+        mysql version: '8.0'
 
     - name: Agregar configuración del proyecto
       run: echo "<?php
