--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php-versions: ['5.6', '7.0', '7.1', '7.2', '7.3', '7.4', '8.0', '8.1', '8.2', '8.3', '8.4']
+        php-versions: ['7.3', '7.4', '8.0', '8.1', '8.2', '8.3', '8.4'] # versiones no validas (phpunit)['5.6', '7.0', '7.1', '7.2']
 
     name: Tests unitarios en PHP ${{ matrix.php-versions }}
     steps:
