chore: fix github actions

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -20,6 +20,7 @@ jobs:
     strategy:
       matrix:
         php-versions: ['7.4', '8.0', '8.1', '8.2', '8.3', '8.4'] # versiones no validas (phpunit)['5.6', '7.0', '7.1', '7.2', '7.3']
+      fail-fast: false
 
     name: Tests unitarios en PHP ${{ matrix.php-versions }}
     steps:
