--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
   "dependencies": {
     "@eastdesire/jscolor": "^2.5.2",
     "@fortawesome/fontawesome-free": "^6.6.0",
-    "@ttskch/select2-bootstrap4-theme": "^1.5.2",
     "bootstrap": "5.*",
     "chart.js": "2.*",
     "jquery": "^3.6.4",
     "jquery-ui-dist": "1.12.*",
     "pace-js": "1.*",
-    "select2": "^4.0.13"
+    "select2": "^4.0.13",
+    "select2-bootstrap-5-theme": "^1.3.0"
   }
 }
