--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
     "ext-pgsql": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "9.*",
+    "phpunit/phpunit": "^9.0",
     "squizlabs/php_codesniffer": "3.*",
     "phpstan/phpstan": "^0.12.93"
   },
