--- a/composer.json
+++ b/composer.json
@@ -35,8 +35,8 @@
     "ext-gd": "*",
     "ext-curl": "*",
     "pragmarx/google2fa": "^8.0",
-    "endroid/qr-code": "^4.3",
-    "ext-pgsql": "*"
+    "ext-pgsql": "*",
+    "endroid/qr-code": "^4.8"
   },
   "require-dev": {
     "phpunit/phpunit": "9.*",
