--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     "ext-curl": "*",
     "pragmarx/google2fa": "^8.0",
     "ext-pgsql": "*",
-    "endroid/qr-code": "^4.8"
+    "chillerlan/php-qrcode": "^4.0"
   },
   "require-dev": {
     "phpunit/phpunit": "9.*",
