--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     "chillerlan/php-qrcode": "^4.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.6",
+    "phpunit/phpunit": "9.*",
     "squizlabs/php_codesniffer": "3.*",
     "phpstan/phpstan": "^0.12.93"
   },
